--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.parse.bolts:bolts-android:1.2.1'
+    compile files('libs/Parse-1.9.4.jar')
+    compile 'com.google.android.gms:play-services:7.5.0'
 }
